add setect & person page

--- a/src/templates/Header/style.module.scss
+++ b/src/templates/Header/style.module.scss
@@ -21,7 +21,8 @@
 		height: 0.13em;
 		background: currentColor;
 		border: none;
-		margin: 0.5em auto;
+		margin: 1em auto;
+		margin-top: 0.5em;
 	}
 
 }
